sudoku recognition and warp image implemented on Android

--- a/native_opencv/android/CMakeLists.txt
+++ b/native_opencv/android/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library( # Sets the name of the library.
         SHARED
         # Provides a relative path to your source file(s).
         ../ios/Classes/SudokuDetector/ArucoDetector.cpp
+        ../ios/Classes/SudokuDetector/SudokuDetector.cpp
         ../ios/Classes/native_opencv.cpp
         )
 
