--- a/flutter_sudoku_app/pubspec.yaml
+++ b/flutter_sudoku_app/pubspec.yaml
@@ -95,6 +95,7 @@ flutter:
     - assets/NumberModel_v0_mobile.pt
     - assets/NumberModel_v0.tflite
     - assets/test_number_model.tflite
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
