Cleaned up the training sript to use a custom network parser which is used to describe the model's structure and parameters

--- a/python_scripts/config/architecture/large_architecture.yaml
+++ b/python_scripts/config/architecture/large_architecture.yaml
@@ -1,3 +1,4 @@
+image_dimensions: [1, 50, 50] # channel, width, height
 layers:
   - type: Conv2d
     params:
@@ -46,7 +47,7 @@ layers:
       blocks: 2
       stride: 2
 
-  - type: AdaptiveAvgPool2d
+  - type: AvgPool2d
     params:
       output_size: [1, 1]
 
