Restructuring how configurations are used; Successfully used litert_torch module to convert PyTorch -> TFLite models seamlessly, however, it lacks the numerical precision as recreating the model in Keras and converting the Keras model to TFLite. Significant trade-off between numerical precision and meticulous and unmaintainable code

--- a/flutter_sudoku_app/pubspec.yaml
+++ b/flutter_sudoku_app/pubspec.yaml
@@ -94,6 +94,7 @@ flutter:
     - assets/NumberModel_v0_mobile.pt
     - assets/NumberModel_v0.tflite
     - assets/test_number_model.tflite
+    - assets/Original_TestNumberModelForTFLite_new_CLI.tflite
     - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
